--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .container{
     margin-top: 5%;
     padding-left: 5%;
-    background-image: linear-gradient(pink,white, gray);
+    background-image: linear-gradient(teal,white, gray);
+    box-sizing: border-box;
 }
 footer{
-    position: fixed;
+    position: center;
         bottom: 0;
         width: 100%;
         height: 5%;
